# tusdatosapp

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
adapters/: __init__.py
adapters/database/: __init__.py
adapters/database/repositories/: user_repository.py
adapters/web/api/: auth.py  events.py
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  entrypoint.sh  main.py  migrate.py
backend/adapters/database/: session.py
backend/adapters/web/: __init__.py
backend/core/: __init__.py
backend/core/entities/: event.py  registration.py  response_entity.py  user.py
backend/core/ports/: __init__.py
backend/core/security/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 0236752b45c1_add_speakers.py  9028b83a79a3_.py  d471c416cd40_relations.py  e297e2d5fd67_add_user_model.py
backend/tests/: conftest.py  test_auth.py  test_event_repository.py  test_speaker.py
core/entities/: __init__.py  event.py  user.py
core/ports/repositories/: event_repository.py
core/security/: auth.py  dependencies.py
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: event.js
frontend/src/assets/: main.css
frontend/src/components/: DashboardLayout.vue
migrations/: env.py
migrations/versions/: 14c2b28e54d0_add_event_registration_table.py  988d9eb2eadf_add_event_registration_table.py  d53625a81ae4_create_event_table.py
tests/: test_auth.py  test_event.py
(+17 files in other folders)
