[tool.poetry]
name = "tusdatosapp"
version = "0.1.0"
description = ""
authors = ["Joel Guerrero <joelgur10@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.1"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
